scaling fix so that the page appears properly on ios

--- a/public/css/paint.less
+++ b/public/css/paint.less
@@ -58,3 +58,14 @@ body {
 	float: right;
 	margin-right: 8px;
 }
+
+@media only screen and (max-width:600px) {
+
+	div.viewport {
+		height: 200px;
+	}
+
+	.js-picker { display: none; }
+	.color-preview { display: none; }
+
+}
